

This is the ztemplates changelog. Here I will keep you informed about the changes I am currently working on. It also contains the changelog for unreleased versions, so you can see what's coming next. 

snapshot available from [https://oss.sonatype.org/content/repositories/snapshots/org/ztemplates/ztemplates/]

__ztemplates-2.4.0-SNAPSHOT (Not yet released)__ 

* added method ZIRenderService.render(JSONArray)
* added support for context parameter property "ztemplates.devMode" (servletContext.getInitParameter("ztemplates.devMode")) that disables as many caches as possible to support tools like JRebel for no redeploy
* added devMode /ztemplates/devMode/refresh url to refresh most cached data, like url match tree
* added devMode /ztemplates/devMode/actions to show actions and matched urls
* added support for Lists of ZIForms in Forms -> dynamic forms
* added support for spring @Component annotation for classes annotated with @ZScriptDefinition

__ztemplates-2.3.1 (Released)__ 

* Fixed a bug in zscript.js related to console output
* Added method render with parameter JSONObject to ZIServletService

__ztemplates-2.3.0 (Released)__ 

* added zscript.js: a small javascript framework for [creating ajax-based applications|BrowserBasedJavascript]
* added support for zscript javascript library, consists of annotation @ZScriptDefinition
* added  public void initPropertyNames(ZIForm form, String formId) to ZIFormService to allow unique ids in forms when using multiple forms on the same page
* fixed a bug that occurs when one declares a public field and a getter for form property or operation
* now can expose private fields in view pojos, takes precedence over methods
* added SPRING_NAME constants to spring compatible beans/services

__ztemplates-2.2.1 (Released)__
* one change in how ZFormProperty generates the ids of form input elements, the ids are now compatible with jQuery selectors

__ztemplates-2.2.0 (Released)__